# check24-best-combination-submission

./: .env.example  .gitignore  README.md  docker-compose.yaml  package.json  prometheus.yml  redis.conf
.github/workflows/: frontend.yml  mongodb.yml  rust.yml
apps/: cargo.toml
apps/best_combination_api/: Cargo.toml  Dockerfile
apps/best_combination_api/src/: config.rs  lib.rs  main.rs
apps/best_combination_api/src/core/: handler.rs  mapper.rs  mod.rs  resolver.rs  service.rs  types.rs
apps/best_combination_worker/: Cargo.toml  Dockerfile
apps/best_combination_worker/src/: config.rs  lib.rs  main.rs
apps/best_combination_worker/src/core/: mapper.rs  mod.rs  processor.rs  service.rs
apps/best_combination_worker/src/services/: enum_set_cover.rs
apps/best_combination_worker/tests/: processer_int_test.rs  worker_integration_test.rs
apps/data_fetch/: Cargo.toml  Dockerfile
apps/data_fetch/src/: config.rs  lib.rs  main.rs
apps/data_fetch/src/core/: handler.rs  mod.rs  resolver.rs
apps/gateway/: Cargo.toml  Dockerfile  router.yaml  supergraph.graphql  supergraph.yaml
apps/gateway/src/: main.rs
apps/libs/: Cargo.toml
apps/libs/benches/: mongo_preprocessing.rs
apps/libs/src/: lib.rs
apps/libs/src/caching/: client.rs  composite_key.rs  hash.rs  mod.rs  utils.rs
apps/libs/src/db/: client.rs  connector.rs  mod.rs
apps/libs/src/db/dao/: documents.rs  game_dao.rs  mod.rs  pipelines.rs  streaming_offer_dao.rs  streaming_package_dao.rs  util.rs
apps/libs/src/logging/: logger.rs
apps/libs/src/messaging/: mod.rs  mq.rs
apps/libs/src/metrics/: counters.rs  handler.rs  middleware.rs  mod.rs  registry.rs
apps/libs/src/models/: mod.rs  util.rs
apps/libs/src/models/dtos/: best_combination_dto.rs  best_combination_element_dto.rs  best_combination_package_dto.rs  best_combination_subset_dto.rs  game_dto.rs  mod.rs  streaming_offer_dto.rs  streaming_package_dto.rs  subset_dto.rs
apps/libs/src/models/fetch_types/: fetch_options.rs  fetch_result.rs  fetch_status.rs  mod.rs
apps/libs/src/models/payloads/: mod.rs  result_message_payload.rs  task_message_payload.rs
apps/libs/src/models/schemas/: game_schema.rs  mod.rs  streaming_offer_schema.rs  streaming_package_schema.rs
apps/libs/src/persistence/: mod.rs
apps/libs/src/persistence/repository/: game_collection.rs  mod.rs  streaming_offer_collection.rs  streaming_package_collection.rs
apps/libs/src/testing/: mod.rs  rabbitmq_container.rs  redis_container.rs
apps/libs/tests/: cache_int_test.rs  cache_integration_test.rs  db_int_test.rs  db_integration_test.rs  persistence_int_test.rs
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: app.rs  db_utils.rs  lib.rs  macros.rs  main.rs  model.rs
backend/src/api/: mod.rs  resolvers.rs  schema.rs  types.rs
backend/src/common/: constants.rs  mod.rs
backend/src/common/models/: game_schema.rs  mod.rs  streaming_offer_schema.rs  streaming_package_schema.rs
backend/src/common/tests/: game_model_tests.rs  mod.rs  streaming_offer_model_tests.rs  streaming_package_model_tests.rs
backend/src/config/: cache.rs  database.rs  logger.rs  mod.rs
backend/src/core/: collection_handler.rs  collection_service.rs  handlers.rs  metrics_handler.rs  mod.rs  routes.rs  team_handler.rs  team_mapper.rs  team_service.rs
backend/src/core/best_combination/: dto.rs  handler.rs  mod.rs  service.rs  set_cover.rs
backend/src/core/health/: health_handler.rs
backend/src/core/metrics/: mod.rs
backend/src/core/models/: streaming_offer_schema.rs
backend/src/core/team/: mod.rs  team_handler.rs  team_mapper.rs  team_service.rs
backend/src/core/tests/: game_model_tests.rs  mod.rs  streaming_offer_model_tests.rs  streaming_package_model_tests.rs  team_mapper_tests.rs
backend/src/libs/: mod.rs
backend/src/libs/cache/: mod.rs
backend/src/libs/caching/: mod.rs
backend/src/libs/logger/: mod.rs
backend/src/libs/logging/: logger.rs  mod.rs
backend/src/libs/metrics/: counters.rs  middleware.rs  mod.rs  registry.rs
backend/src/libs/mongo/: database.rs  mod.rs
benchmarks/: Cargo.toml
benchmarks/benches/: recursive_set_cover.rs  set_cover_comparison.rs
benchmarks/data/: subset_benchmark_data.json  universe_benchmark_data.json
benchmarks/src/: iterative.rs  lib.rs  recursive.rs  util.rs
frontend/: .env.example  .gitignore  .prettierignore  .prettierrc  Dockerfile  astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: env.d.ts
frontend/src/components/: about.astro  best-combination.astro  combination-card.tsx  content-section.astro  footer.astro  header.astro  performance.astro  search-box.tsx  tech-stack-list.astro  tech-stack.astro  theme-switcher.astro
frontend/src/components/best-combination/: best-combination-card.tsx  best-combination-container.tsx  best-combination-list.tsx  best-combination.astro  search-input.tsx  selected-items.tsx  types.ts  util.ts
frontend/src/components/best-combination/hooks/: use-best-combination.tsx  use-finalize-input.tsx  use-suggestion.tsx
frontend/src/pages/: index.astro
frontend/src/styles/: global.css  theme.css
frontend/src/util/: fetch-graphql.ts  mutations.ts  queries.ts  types.ts
grafana/dashboards/: api_monitoring_api_service_dashboard.json  api_monitoring_dashboard.json  api_monitoring_data_fetch_service_dashboard.json
grafana/provisioning/dashboards/: dashboard.json
http-client/: best-combination.http  http-client.private.env.json
loadtests/: data.json  loadtest.js
mongodb/: Dockerfile  bc_game.csv  bc_streaming_package.csv  mongo_init.sh
