[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
actix-web = "4"
# serde = "1.0.188"
# futures = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
redis = { version = "0.27.3", features = ["tokio-comp"] }
# chrono = { version = "0.4.38", features = ["serde"] }
# anyhow = "1.0.89"
dotenv = "0.15.0"
env_logger = "0.11.5"

[dependencies.mongodb]
version = "3.1.0"
