[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
redis = { version = "0.27.3", features = ["tokio-comp"] }
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"

[dependencies.mongodb]
version = "3.1.0"
