[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
redis = { version = "0.27.3", features = ["tokio-comp"] }
validator = { version = "0.19.0", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = "1.0.215"
serde_json = "1.0.133"
regex = "1.11.1"
once_cell = "1.20.2"
actix-web = "4"
futures = "0.3.31"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
prometheus = "0.13.4"
async-graphql = "7.0.11"
async-graphql-actix-web = "7.0.11"
anyhow = "1.0.93"

[dependencies.mongodb]
version = "3.1.0"
