[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "set_cover_comparison"
bench = true
harness = false

[[bench]]
name = "recursive_set_cover"
bench = true
harness = false
