[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Schneider <adrian.schneider11@icloud.com>"]
repository = "https://github.com/adrior11/check24-best-combination-submission"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "set_cover_comparison"
bench = true
harness = false

[[bench]]
name = "recursive_set_cover"
bench = true
harness = false
