[package]
name = "best_combination_api"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Schneider <adrian.schneider11@icloud.com>"]
repository = "https://github.com/adrior11/check24-best-combination-submission"
license = "MIT"

[[bin]]
name = "api-service"
path = "src/main.rs"

[dependencies]
libs = { path = "../libs" }
tokio = { version = "1.32.0", features = ["full"] }
redis = { version = "0.27.3", features = ["tokio-comp"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
lapin = "2.5.0"
once_cell = "1.20.2"
actix-web = "4"
actix-cors = "0.7.0"
futures = "0.3.31"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
prometheus = "0.13.4"
async-graphql = "7.0.11"
async-graphql-actix-web = "7.0.11"
anyhow = "1.0.93"
mongodb = "3.1.0"
envy = "0.4.2"
