[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Schneider <adrian.schneider11@icloud.com>"]
repository = "https://github.com/adrior11/check24-best-combination-submission"
license = "MIT"

[[bin]]
name = "gateway-service"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.93"
apollo-router = "1.59.0"
