[package]
name = "libs"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Schneider <adrian.schneider11@icloud.com>"]
repository = "https://github.com/adrior11/check24-best-combination-submission"

[lib]
crate-type = ["lib"]
bench = false

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
redis = { version = "0.27.3", features = ["tokio-comp"] }
validator = { version = "0.19.0", features = ["derive"] }
# chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
lapin = "2.5.0"
tokio-executor-trait = "2.1.3"
tokio-reactor-trait = "1.1.0"
regex = "1.11.1"
once_cell = "1.20.2"
actix-web = "4"
futures = "0.3.31"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
prometheus = "0.13.4"
async-graphql = "7.0.11"
async-graphql-actix-web = "7.0.11"
anyhow = "1.0.93"
mongodb = "3.1.0"
async-trait = "0.1.83"
testcontainers = "0.23.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "mongo_preprocessing"
bench = true
harness = false
